--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+<script>
+(() => {
+  document.addEventListener("DOMContentLoaded", () => {
+    const menuHamburguer = document.querySelector(".menu-hamburguer");
+    const nav = document.querySelector(".nav");
+
+    if (!menuHamburguer || !nav) {
+      console.warn("⚠️ Menu hamburguer ou nav não encontrados");
+      return;
+    }
+
+    console.log("🍔 Menu mobile inicializado");
+
+    menuHamburguer.addEventListener("click", (e) => {
+      e.stopPropagation();
+      nav.classList.toggle("active");
+      menuHamburguer.classList.toggle("open");
+      console.log("🍔 Clique no menu:", nav.classList.contains("active") ? "aberto" : "fechado");
+    });
+
+    // Fecha menu ao clicar em link
+    nav.addEventListener("click", (e) => {
+      if (e.target.classList.contains("nav-link")) {
+        nav.classList.remove("active");
+        menuHamburguer.classList.remove("open");
+        console.log("🔹 Fechando menu após clique em link");
+      }
+    });
+
+    // Fecha ao clicar fora
+    document.addEventListener("click", (e) => {
+      if (!menuHamburguer.contains(e.target) && !nav.contains(e.target)) {
+        nav.classList.remove("active");
+        menuHamburguer.classList.remove("open");
+      }
+    });
+  });
+})();
+</script>
+
 
 <body>
 
@@ -124,32 +164,6 @@
 
   <!-- Script de checkout visitante -->
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-  const menuHamburguer = document.querySelector(".menu-hamburguer");
-  const nav = document.querySelector(".nav");
-
-  if (menuHamburguer && nav) {
-    menuHamburguer.addEventListener("click", (e) => {
-      e.stopPropagation();
-      nav.classList.toggle("active");
-      menuHamburguer.classList.toggle("open");
-    });
-
-    nav.addEventListener("click", (e) => {
-      if (e.target.classList.contains("nav-link")) {
-        nav.classList.remove("active");
-        menuHamburguer.classList.remove("open");
-      }
-    });
-
-    document.addEventListener("click", (e) => {
-      if (!nav.contains(e.target) && !menuHamburguer.contains(e.target)) {
-        nav.classList.remove("active");
-        menuHamburguer.classList.remove("open");
-      }
-    });
-  }
-});
   document.addEventListener('DOMContentLoaded', () => {
     console.log("Checkout visitante pronto.");
 
