--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   <!-- Scripts principais -->
    <script src="js/index.js"></script>
   <script src="js/product-options.js"></script>
+  <script src="js/ui_control.js"></script>
   
 
   <!-- Script de checkout visitante -->
