--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
   </div>
 
   <!-- Scripts principais -->
-   <script src="js/index.js"></script>
-  <script src="js/product-options.js"></script>
-  <script src="js/ui_control.js"></script>
+   <script src="js/index.js?v=4.1.3"></script>
+  <script src="js/product-options.js?v=4.1.3"></script>
+  <script src="js/ui_control.js?v=4.1.3"></script>
   
 
   <!-- Script de checkout visitante -->
