--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
       </h1>
       <div class="menu-hamburguer">☰</div>
       <nav class="nav">
-        <a href="login_index.php" class="nav-link active">Login</a>
-        <a href="#ofertas" class="nav-link">Ofertas</a>
-        <a href="#contato" class="nav-link">Contato</a>
+        <div class="menu-tabs" id="menuTabs" style="margin-left:12px;">
+          <a href="login_index.php" class="nav-link active">Login</a>
+          <a href="#contato" class="nav-link">Contato</a>
+          <button class="tab active" data-filter="all">Todos</button>
+          <button class="tab" data-filter="drinks">Bebidas</button>
+        </div>
       </nav>
     </div>
   </header>
