okay agora foi sa porra

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
   <link rel="icon" href="img/stg.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/antijingoist/opendyslexic/opendyslexic.css">
 </head>
 
 
 <body>
+
+  <div id="acess-widget-button">
+    ⚙️
+</div>
+
+<div id="acess-panel">
+    <h3>Acessibilidade</h3>
+
+    <button onclick="fonteMenor()">A-</button>
+    <button onclick="fonteNormal()">A</button>
+    <button onclick="fonteMaior()">A+</button>
+    <hr>
+
+    <button onclick="alternarContraste()">Contraste</button>
+    <button id="btnDys">Disléxico</button>
+    <button id="btnDaltonismo">Daltonismo</button>
+    <hr>
+</div>
 
   <header class="header">
     <div class="container">
@@ -26,7 +45,7 @@
             <i class="fas fa-moon"></i>
           </button>
           <a href="login_index.php" class="nav-link active">Login</a>
-          <a href="#contato" class="nav-link">Contato</a>
+          <a href="https://wa.me/+5519982619876" class="nav-link">Contato</a>
           <button class="tab active" data-filter="all">Todos</button>
           <button class="tab" data-filter="drinks">Bebidas</button>
         </div>
@@ -225,11 +244,89 @@
   </div>
 </div>
 
+ </script>
+<!-- VLibras Widget -->
+<div vw class="enabled">
+  <div vw-access-button class="active"></div>
+  <div vw-plugin-wrapper>
+    <div class="vw-plugin-top-wrapper"></div>
+  </div>
+</div>
+<div id="reading-mask"></div>
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
 <script>
   new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
+<script>
+// Abrir painel
+const btnWidget = document.getElementById("acess-widget-button");
+const painel = document.getElementById("acess-panel");
 
+btnWidget.addEventListener("click", () => {
+    painel.classList.toggle("open");
+});
+
+// Fonte
+let tamanhoBase = 100;
+function aplicarFonte() {
+  document.documentElement.style.fontSize = tamanhoBase + "%";
+  localStorage.setItem("tamanhoFonte", tamanhoBase);
+}
+function fonteMenor() { if (tamanhoBase > 70) { tamanhoBase -= 10; aplicarFonte(); } }
+function fonteNormal() { tamanhoBase = 100; aplicarFonte(); }
+function fonteMaior() { if (tamanhoBase < 160) { tamanhoBase += 10; aplicarFonte(); } }
+
+// Contraste
+function alternarContraste() {
+  document.body.classList.toggle("alto-contraste");
+  localStorage.setItem("altoContraste", document.body.classList.contains("alto-contraste") ? "1" : "0");
+}
+
+// Dyslexic
+document.getElementById("btnDys").onclick = () => {
+    document.body.classList.toggle("opendyslexic");
+    localStorage.setItem("opendyslexic", document.body.classList.contains("opendyslexic") ? "1" : "0");
+};
+
+// Daltonismo
+document.getElementById("btnDaltonismo").onclick = () => {
+    document.body.classList.toggle("daltonismo");
+    localStorage.setItem("daltonismo", document.body.classList.contains("daltonismo") ? "1" : "0");
+};
+
+// Máscara leitura
+document.getElementById("btnMascara").onclick = () => {
+    document.body.classList.toggle("mascara-leitura");
+    localStorage.setItem("mascaraLeitura", document.body.classList.contains("mascara-leitura") ? "1" : "0");
+};
+document.addEventListener("mousemove", function(e) {
+  const mask = document.getElementById("reading-mask");
+  if (!mask || !document.body.classList.contains("mascara-leitura")) return;
+  mask.style.top = e.clientY - 60 + "px";
+});
+
+// Cursor
+document.getElementById("btnCursor").onclick = () => {
+    document.body.classList.toggle("cursor-grande");
+    localStorage.setItem("cursorGrande", document.body.classList.contains("cursor-grande") ? "1" : "0");
+};
+
+// Modo leitura
+document.getElementById("btnLeitura").onclick = () => {
+    document.body.classList.toggle("modo-leitura");
+    localStorage.setItem("modoLeitura", document.body.classList.contains("modo-leitura") ? "1" : "0");
+};
+
+// Carregar preferências
+(function() {
+  let fs = localStorage.getItem("tamanhoFonte"); 
+  if (fs) { tamanhoBase = parseInt(fs); aplicarFonte(); }
+
+  if (localStorage.getItem("altoContraste")==="1") document.body.classList.add("alto-contraste");
+  if (localStorage.getItem("opendyslexic")==="1") document.body.classList.add("opendyslexic");
+  if (localStorage.getItem("daltonismo")==="1") document.body.classList.add("daltonismo");
+})();
+</script>
 </body>
 
 </html>
